# XCQ

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: build.yml
examples/example-fungibles/: Cargo.toml
examples/example-helloworld/: Cargo.toml
guest-examples/: Cargo.toml  rust-toolchain.toml
guest-examples/.cargo/: config.toml
guest-examples/sum-balance/: Cargo.toml
guest-examples/sum-balance-hand-written/: Cargo.toml
guest-examples/sum-balance-hand-written/src/: main.rs
guest-examples/sum-balance-percent/src/: main.rs
guest-examples/total-supply/: Cargo.toml
guest-examples/total-supply/src/: main.rs
guest-examples/transparent-call-hand-written/: Cargo.toml
poc/executor/: Cargo.toml
poc/executor/src/: lib.rs
poc/extensions/: Cargo.toml
poc/extensions/src/: dispatchable.rs  error.rs  extension_core.rs  extension_fungibles.rs  guest.rs  lib.rs  macros.rs  perm_controller.rs
poc/guest/: Cargo.toml
poc/guest/src/: main.rs
poc/guests/: Cargo.toml  rust-toolchain.toml
poc/guests/.cargo/: config.toml
poc/guests/average_price/: Cargo.toml
poc/guests/average_price/src/: main.rs
poc/guests/pass-custom-type/: Cargo.toml
poc/guests/pass-custom-type/src/: main.rs
poc/guests/query-balance/: Cargo.toml
poc/guests/query-balance-fungibles/: Cargo.toml
poc/guests/query-balance-fungibles/src/: main.rs
poc/guests/query-balance/src/: main.rs
poc/guests/sum-balance/: Cargo.toml  expanded.rs
poc/guests/sum-balance-percent/: Cargo.toml
poc/guests/sum-balance-percent/src/: main.rs
poc/guests/sum-balance-raw/: Cargo.toml
poc/guests/sum-balance-raw/src/: main.rs
poc/guests/total-supply/: Cargo.toml
poc/guests/transparent-call/: Cargo.toml
poc/host/: Cargo.toml
poc/host/src/: executor.rs  main.rs
poc/hosts/pass-custom-type/: Cargo.toml
poc/hosts/pass-custom-type/src/: main.rs
poc/runtime/: Cargo.toml  build.rs  chopsticks.yml
poc/runtime/src/: lib.rs  pvq.rs  xcq.rs
pvq-api/: Cargo.toml
pvq-api/procedural/: Cargo.toml
pvq-api/procedural/src/: lib.rs
pvq-api/procedural/src/program/: mod.rs
pvq-api/procedural/src/program/parse/: call.rs  entrypoint.rs  helper.rs  mod.rs
pvq-api/src/: lib.rs
pvq-executor/: Cargo.toml
pvq-executor/src/: context.rs  error.rs  executor.rs  lib.rs
pvq-extension/: Cargo.toml
pvq-extension-core/: Cargo.toml
pvq-extension-core/src/: lib.rs
pvq-extension-fungibles/: Cargo.toml
pvq-extension-fungibles/src/: lib.rs
pvq-extension/procedural/: Cargo.toml
pvq-extension/procedural/examples/proc_main/: extension_decl.rs  extension_impl.rs  main.rs
pvq-extension/procedural/src/: decl_extensions.rs  impl_extensions.rs  lib.rs  runtime_metadata.rs  utils.rs
pvq-extension/procedural/src/extension_decl/: mod.rs
pvq-extension/procedural/src/extension_decl/expand/: extension.rs  helper.rs  metadata.rs  mod.rs
pvq-extension/procedural/src/extension_decl/parse/: extension.rs  helper.rs  mod.rs
pvq-extension/procedural/src/extensions_impl/: mod.rs
pvq-extension/procedural/src/extensions_impl/expand/: metadata.rs  mod.rs
pvq-extension/procedural/src/extensions_impl/parse/: extension.rs  helper.rs  impl_struct.rs  mod.rs
pvq-extension/procedural/tests/: tests.rs
pvq-extension/procedural/tests/ui/extension_decl/: not_on_mod.rs  not_on_mod.stderr
pvq-extension/procedural/tests/ui/extension_decl/pass/: sucess.rs
pvq-extension/procedural/tests/ui/extensions_impl/: missing_impl_struct.rs  missing_impl_struct.stderr
pvq-extension/procedural/tests/ui/extensions_impl/pass/: success.rs
pvq-extension/src/: calldata.rs  context.rs  dispatchable.rs  error.rs  executor.rs  extension_id.rs  lib.rs  macros.rs  metadata.rs  perm_controller.rs
pvq-extension/tests/: lib.rs  with_associated_types_works.rs
pvq-primitives/: Cargo.toml
pvq-primitives/src/: lib.rs
pvq-program/: Cargo.toml
pvq-program/.cargo/: config.toml
pvq-program/examples/: Cargo.toml
pvq-program/examples/sum-balance-percent/: Cargo.toml
pvq-program/examples/sum-balance/src/: main.rs
pvq-program/examples/total-supply-hand-written/: Cargo.toml
pvq-program/examples/total-supply-hand-written/src/: main.rs
pvq-program/procedural/: Cargo.toml
pvq-program/procedural/src/: lib.rs
pvq-program/procedural/src/program/: mod.rs
pvq-program/procedural/src/program/expand/: mod.rs  preludes.rs
pvq-program/procedural/src/program/parse/: entrypoint.rs  extension_fn.rs  helper.rs  mod.rs
pvq-program/procedural/tests/: tests.rs
pvq-program/procedural/tests/ui/: sum-balance.rs
pvq-program/src/: lib.rs
pvq-runtime-api/: Cargo.toml
pvq-runtime-api/src/: lib.rs
pvq-test-runner/: Cargo.toml
pvq-test-runner/src/: lib.rs  main.rs
rfcs/: add-xcq-to-fellowship.md
xcq-api/: Cargo.toml
xcq-api/procedural/: Cargo.toml
xcq-api/procedural/src/: lib.rs
xcq-api/src/: lib.rs
xcq-executor/: Cargo.toml
xcq-executor/src/: lib.rs
xcq-extension/: Cargo.toml
xcq-extension-core/: Cargo.toml
xcq-extension-core/src/: lib.rs
xcq-extension-fungibles/: Cargo.toml
xcq-extension-fungibles/src/: lib.rs
xcq-extension/procedural/: Cargo.toml
xcq-extension/procedural/src/: decl_extensions.rs  impl_extensions.rs  lib.rs  runtime_metadata.rs  utils.rs
xcq-extension/src/: error.rs  lib.rs  macros.rs  metadata.rs  perm_controller.rs
xcq-extension/tests/: extension_executor_works.rs  with_associated_types_works.rs
xcq-poc/: Cargo.toml
xcq-primitives/: Cargo.toml
xcq-primitives/src/: lib.rs  metadata.rs  metadata_ir.rs
xcq-runtime-api/: Cargo.toml
xcq-runtime-api/procedural/src/: utils.rs
xcq-runtime-api/src/: lib.rs
xcq-test-runner/: Cargo.toml
xcq-test-runner/src/: main.rs
xcq-types/: Cargo.toml
xcq-types/derive/: Cargo.toml
xcq-types/derive/src/: lib.rs
xcq-types/src/: impls.rs  lib.rs  meta_type.rs  prelude.rs  tests.rs
xcq-types/src/ty/: composite.rs  enum.rs  field.rs  mod.rs  primitive.rs  struct.rs  variant.rs
xcq-types/tests/: Cargo.toml  derive.rs  macros.rs  main.rs  prelude.rs
xcq-types/tests/src/: lib.rs
(+9 files in other folders)
