[workspace.package]
authors = ["Acala Developers <hello@acala.network>"]
edition = "2021"
repository = "https://github.com/open-web3-stack/XCQ"
license = "Apache-2.0"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "poc/hosts/*",
    "poc/runtime",
    "poc/executor",
    "poc/extensions",

    "xcq-api",
    "xcq-executor",
    "xcq-extension-core",
    "xcq-extension-fungibles",
    "xcq-extension",
    "xcq-primitives",
    "xcq-runtime-api",
    "xcq-test-runner",
    "xcq-types",

    "examples/example-fungibles",
    "examples/example-helloworld",
]
exclude = ["poc/guests", "vendor"]

[profile.release]
# runtime requires unwinding.
panic = "unwind"
opt-level = 3

[workspace.dependencies]
# local
xcq-api = { path = "xcq-api", default-features = false }
xcq-executor = { path = "xcq-executor", default-features = false }
xcq-extension-core = { path = "xcq-extension-core", default-features = false }
xcq-extension-fungibles = { path = "xcq-extension-fungibles", default-features = false }
xcq-extension = { path = "xcq-extension", default-features = false }
xcq-primitives = { path = "xcq-primitives", default-features = false }
xcq-runtime-api = { path = "xcq-runtime-api", default-features = false }
xcq-test-runner = { path = "xcq-test-runner", default-features = false }
xcq-types = { path = "xcq-types", default-features = false }

# polkavm
polkavm = { path = "vendor/polkavm/crates/polkavm", default-features = false }

# polkadot-sdk
sp-api = { version = "29.0.0", default-features = false }

# nostd
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
] }
tracing = { version = "0.1.40", default-features = false }

# std
clap = { version = "4.5.4", features = ["derive"] }
env_logger = { version = "0.11.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
