[workspace.package]
authors = ["Acala Developers <hello@acala.network>"]
edition = "2021"
repository = "https://github.com/open-web3-stack/PVQ"
license = "Apache-2.0"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "poc/runtime",

    "pvq-program",
    "pvq-executor",
    "pvq-extension-core",
    "pvq-extension-fungibles",
    "pvq-extension",
    "pvq-primitives",
    "pvq-runtime-api",
    "pvq-test-runner",

    "examples/example-fungibles",
    "examples/example-helloworld",
]
exclude = ["guest-examples", "vendor"]

[profile.release]
# runtime requires unwinding.
panic = "unwind"
opt-level = 3

[workspace.dependencies]
# local
pvq-program = { path = "pvq-program", default-features = false }
pvq-executor = { path = "pvq-executor", default-features = false }
pvq-extension-core = { path = "pvq-extension-core", default-features = false }
pvq-extension-fungibles = { path = "pvq-extension-fungibles", default-features = false }
pvq-extension = { path = "pvq-extension", default-features = false }
pvq-primitives = { path = "pvq-primitives", default-features = false }
pvq-runtime-api = { path = "pvq-runtime-api", default-features = false }
pvq-test-runner = { path = "pvq-test-runner", default-features = false }

# polkavm
polkavm = { path = "vendor/polkavm/crates/polkavm", default-features = false }
polkavm-derive = { path = "vendor/polkavm/crates/polkavm-derive", default-features = false }

# polkadot-sdk
sp-api = { path = "vendor/polkadot-sdk/substrate/primitives/api", default-features = false }
frame = { package = "polkadot-sdk-frame", path = "vendor/polkadot-sdk/substrate/frame", default-features = false }
pallet-balances = { path = "vendor/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-assets = { path = "vendor/polkadot-sdk/substrate/frame/assets", default-features = false }
pallet-sudo = { path = "vendor/polkadot-sdk/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "vendor/polkadot-sdk/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "vendor/polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "vendor/polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }

# genesis builder that allows us to interacto with runtime genesis config
sp-genesis-builder = { path = "vendor/polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }

# wasm builder
substrate-wasm-builder = { version = "22.0.1" }

# nostd
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
] }
tracing = { version = "0.1.40", default-features = false }

# std
clap = { version = "4.5.4", features = ["derive"] }
env_logger = { version = "0.11.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

fortuples = "0.9"

# proc macros
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
trybuild = "1"
