[package]
name = "pvq-api"
description = "API between PVQ host and guest program"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pvq-api-procedural = { path = "procedural" }

[features]
default = ["std"]
std = []
