[package]
name = "pvq-primitives"
description = "Primitives for PVQ"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = ["parity-scale-codec/std", "scale-info/std"]
