[package]
name = "pvq-runtime-api"
description = "Runtime API for PVQ"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pvq-primitives = { workspace = true }

sp-api = { workspace = true }

[features]
default = ["std"]
std = ["pvq-primitives/std", "sp-api/std"]
