[package]
name = "pvq-test-runner"
description = "PVQ program runner. Only for testing purpose."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }

pvq-executor = { workspace = true, features = ["std"] }
pvq-extension = { workspace = true, features = ["std"] }
pvq-extension-core = { workspace = true, features = ["std"] }
pvq-extension-fungibles = { workspace = true, features = ["std"] }
pvq-primitives = { workspace = true, features = ["std"] }

polkavm = { workspace = true, features = ["std"] }
