[package]
name = "xcq-executor"
description = "XCQ program executor"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }

polkavm = { workspace = true }

xcq-api = { workspace = true }
xcq-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "tracing/std",

    "polkavm/std",

    "xcq-api/std",
    "xcq-primitives/std",
]
