[package]
name = "xcq-extension-core"
description = "Core extension for XCQ"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
xcq-extension = { workspace = true }

[features]
default = ["std"]
std = ["parity-scale-codec/std", "xcq-extension/std"]
