[package]
name = "xcq-extension"
description = "Extension system for XCQ"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
polkavm = { workspace = true }
scale-info = { workspace = true }
xcq-executor = { workspace = true }
fortuples = { workspace = true }
tracing = { workspace = true }
xcq-extension-procedural = { path = "procedural" }
xcq-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "xcq-executor/std",
    "tracing/std",
]
