[package]
name = "xcq-extension"
description = "Extension system for XCQ"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
polkavm = { workspace = true }
xcq-executor = { workspace = true }
fortuples = { workspace = true }
tracing = { workspace = true }
xcq-extension-procedural = { path = "procedural" }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
xcq-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "polkavm/std",
    "xcq-executor/std",
    "xcq-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "tracing/std",
]
