[package]
name = "xcq-test-runner"
description = "XCQ program runner. Only for testing purpose."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

xcq-executor = { workspace = true, features = ["std"] }

polkavm = { workspace = true }
