[package]
name = "xcq-test-runner"
description = "XCQ program runner. Only for testing purpose."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }

xcq-executor = { workspace = true, features = ["std"] }
xcq-extension = { workspace = true, features = ["std"] }
xcq-extension-core = { workspace = true, features = ["std"] }
xcq-extension-fungibles = { workspace = true, features = ["std"] }
xcq-primitives = { workspace = true }

polkavm = { workspace = true }
