[package]
name = "xcq-types"
description = "Metatype system for XCQ"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
cfg-if = "1.0"
parity-scale-codec = { workspace = true }
serde = { version = "1", default-features = false, optional = true, features = [
    "derive",
] }
fortuples = "0.9"
xcq-types-derive = { path = "derive" }

[features]
default = ["std"]
std = ["parity-scale-codec/std"]
