[package]
name = "poc-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { version = "0.2.0", package = "polkadot-sdk-frame", default-features = false, features = [
    "experimental",
    "runtime",
] }

# pallets that we want to use
pallet-balances = { version = "34.0.0", default-features = false }
pallet-assets = { version = "34.0.0", default-features = false }
pallet-sudo = { version = "33.0.0", default-features = false }
pallet-timestamp = { version = "32.0.0", default-features = false }
pallet-transaction-payment = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0", default-features = false }

# genesis builder that allows us to interacto with runtime genesis config
sp-genesis-builder = { version = "0.12.0", default-features = false }

xcq-executor = { workspace = true }
xcq-extension = { workspace = true }
xcq-extension-core = { workspace = true }
xcq-extension-fungibles = { workspace = true }
xcq-primitives = { workspace = true }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
substrate-wasm-builder = { version = "22.0.1", optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame/std",

    "pallet-balances/std",
    "pallet-assets/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",

    "sp-genesis-builder/std",
    "substrate-wasm-builder",

    "xcq-executor/std",
    "xcq-extension/std",
    "xcq-extension-core/std",
    "xcq-extension-fungibles/std",
]
