[package]
name = "poc-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"] }

# pallets that we want to use
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# genesis builder that allows us to interacto with runtime genesis config
sp-genesis-builder = { workspace = true }

pvq-executor = { workspace = true }
pvq-extension = { workspace = true }
pvq-extension-core = { workspace = true }
pvq-extension-fungibles = { workspace = true }
pvq-primitives = { workspace = true }
pvq-runtime-api = { workspace = true }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame/std",

    "pallet-balances/std",
    "pallet-assets/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",

    "sp-genesis-builder/std",
    "substrate-wasm-builder",

    "pvq-executor/std",
    "pvq-extension/std",
    "pvq-primitives/std",
    "pvq-extension-core/std",
    "pvq-extension-fungibles/std",
]
