[package]
name = "pvq-api-procedural"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
Inflector = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
