[package]
name = "pvq-extension-procedural"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
twox-hash = "1.6.3"

[dev-dependencies]
pvq-extension = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
trybuild = "1.0"
