[package]
name = "xcq-extension-procedural"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
Inflector = { workspace = true }
twox-hash = "1.6.3"
