[package]
name = "poc-host-pass-custom-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }

polkavm = { workspace = true }

poc-executor = { path = "../../executor" }
