[package]
name = "guest-total-supply-hand-written"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
